# cmmd-pytorch

./: Makefile  README.md  generate_images.py  main.py  pyproject.toml
.github/workflows/: ci.yaml
cmmd/: __init__.py  cli.py  cmmd_score.py  distance.py  embedding.py  io_util.py  main.py  testing.py
tests/: cmmd_score_test.py
