[tool.poetry]
name = "cmmd-pytorch"
version = "0.1.0"
description = ""
authors = [
    "Sayak Paul <spsayakpaul@gmail.com>",
    "Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>",
]
readme = "README.md"
packages = [{ include = "cmmd" }]

[tool.poetry.dependencies]
python = "^3.9"
transformers = { version = ">=4.6.0", extras = ["torch"] }
absl-py = "^2.1.0"
pillow = ">=5.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

[tool.ruff.lint]
ignore = [
    "E741", # ambiguous-variable-name
]

[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

[tool.poetry.scripts]
cmmd-pytorch = "cmmd.main:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
